# Data-Certify

./: .gitignore  CHANGELOG.md  LICENSE  README.md  prepare_dataset.py  pyproject.toml  run_audit.py  setup.py  tall -e .[all]
.github/workflows/: tests.yml
Dataset/GAF-DB/: ATTRIBUTION.md
calibration/: README.md  __init__.py  _analysis_common.py  _fast_match_helper.py  adversarial_corpus_manifest.csv  analysis_ablation.py  analysis_d1_case_study.py  analysis_d1b_aftershock_forecast.py  analysis_d1d_cross_agency_merge.py  analysis_decision_stability.py  analysis_selective_classification.py  analysis_three_way_matrix.py  benchmark_runtime.py  bootstrap_ewm_stability.py  bootstrap_stability_report.json  bootstrap_stability_report.md  build_adversarial_corpus.py  build_corpus.py  calibrate_a6_three_state.py  calibrate_hard_override_params.py  calibrate_theta_auth.py  calibrate_thresholds.py  compute_ewm.py  corpus_expansion_v8_fetch_report.txt  corpus_expansion_v9_fetch_report.txt  corpus_manifest.csv  corrupt.py  derive_parent_catalog.py  enrich_moment_tensor_finite_fault_from_usgs.py  enrich_tsunami_mmi_from_usgs.py  ewm_report.json  ewm_report.md  fetch_corpus_expansion_v8.py  fetch_corpus_expansion_v9.py  fetch_multisource_chile_iquique.py  hard_override_calibration_report.json  hard_override_calibration_report.md  make_paper_figures.py  parsers.py  refit_full_corpus.py  (+15 more)
calibration/group_b_reports/: ablation_a6_mini.csv  ablation_mechanism.csv  ablation_report.txt  ablation_weight_variants.csv  decision_stability_per_dataset.csv  decision_stability_report.txt  selective_classification_report.txt  selective_classification_risk_coverage_curve.csv  selective_classification_utility.csv  three_way_matrix_by_corruption_type.csv  three_way_matrix_by_n_records_bucket.csv  three_way_matrix_main.csv  three_way_matrix_main_ungated.csv  three_way_matrix_report.txt
calibration/group_c_reports/: a6_three_state_report.json  a6_three_state_report.md  benchmark_runtime_report.json  benchmark_runtime_report.txt  refit_full_corpus_report.json  split_corpus_report.json
calibration/group_d_reports/: d1_case_study_report.txt  d1_case_study_variants.csv  d1b_aftershock_report.txt  d1b_aftershock_variants.csv  d1d_cross_agency_report.txt  maximum_curvature_recalibration_report.txt
data_certify/: __init__.py  _constants.py  axis_authenticity.py  axis_completeness.py  axis_instrumentation.py  axis_plausibility.py  decision.py  hard_override.py  reference_data.py  results.py  schema.py  stats.py
datasets/nz/: records.csv
examples/: example_custom_dataset.py  example_nz_chile_audit.py
tests/: _adversarial_fabrication.py  conftest.py  test_adversarial.py  test_axis_authenticity.py  test_axis_completeness.py  test_axis_instrumentation.py  test_axis_plausibility.py  test_decision.py  test_decision_score_matrix_consistency.py  test_edge_cases.py  test_gem_active_faults_database.py  test_hard_override.py  test_new_statistical_methods.py  test_prepare_dataset.py  test_reference_data.py  test_reference_data_new_sources.py  test_schema.py  test_scientific_validity.py  test_stats.py
