[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data_certify"
version = "0.1.2"
description = "DATA-CERTIFY: A Dataset Trustworthiness Audit Framework for Disaster Seismic Data. Theoretical-framework companion implementation."
authors = [
    {name = "Nattakitti Piyavechvirat"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "All Rights Reserved"}
dependencies = [
    "numpy>=1.21.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
# pandas is needed only by prepare_dataset.py's CSV parsing/column-mapping
# (the core audit package itself stays numpy-only).
prepare = ["pandas>=1.3"]
# Dev/test extra: pytest for the automated regression suite (tests/).
# The core data_certify package itself never imports pytest or scipy --
# see stats.py's module docstring on the numpy-only design constraint.
test    = ["pytest>=7.0"]
all     = ["pandas>=1.3", "pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
data-certify-audit = "run_audit:main"
data-certify-prepare = "prepare_dataset:main"

[tool.setuptools]
py-modules = ["run_audit", "prepare_dataset"]

[tool.setuptools.packages.find]
where = ["."]
include = ["data_certify*"]

[tool.setuptools.package-data]
data_certify = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py38"
